@@ -1,3 +1,10 @@
+2005-03-17  Sam Steingold  <sds@gnu.org>
+
+	* configure.in: test for realpath()
+	* pathname.d (realpath): use the OS-supplied realpath()
+	implementation when it is available (we can add a workability test
+	when/if necessary)
+
 2005-03-14  Bruno Haible  <bruno@clisp.org>
 
 	* debug.d (read_form): Don't delete input until EOL if the last char
